# Dashboard

./: .gitignore  LICENSE  README.md  pyproject.toml
dashboard/: 1-🏠-Home.py  README.md
dashboard/pages/: README.md  🎥_Video.py
dashboard/util/: __init__.py  config.py  custom_css.py  data.py
