[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = "A collection of Handy and Fun tools."
authors = ["Blastorios <jordi.zwiggelaar@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.11.0"
yt-dlp = "^2022.6.29"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
